--- a/in-class-activity-ajax/index.html
+++ b/in-class-activity-ajax/index.html
@@ -137,6 +137,7 @@
 
 <body>
     <header>
+        <H1>Imgur Search :3</H1>
         <input id="albumIdField" value="Jfni3" type="text" placeholder="Enter any imgur's album id">
         <button onclick="requestAlbumwithXHR()">View Images with XHR</button>
         <button onclick="requestAlbumwithPromise()">View Images with Fetch (Promise)</button>
