--- a/in-class-activity-ajax/index.html
+++ b/in-class-activity-ajax/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,127 +22,108 @@
         }
     </style>
     <script>
-
         const clientId = "1d382e638ddd70e";
         var defaultAlbumId = 'Jfni3';
 
         function requestAlbumwithXHR() {
-            let albumId = document.getElementById("albumIdField").innerText;
-            if (!albumId) {
-                albumId = defaultAlbumId;
+            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
+            fetchAlbumData(albumId, processAlbumRequestXHR);
+        }
+
+        function requestAlbumWithPromise() {
+            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
+            fetchAlbumData(albumId, processAlbumRequestPromise);
+        }
+
+        async function requestAlbumWithAsyncAwait() {
+            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
+            try {
+                const albumData = await fetchAlbumDataAsync(albumId);
+                processAlbumRequestAsync(albumData);
+            } catch (error) {
+                console.error("Error with the imgur API:", error);
             }
-            var req = new XMLHttpRequest();
+        }
+
+        function fetchAlbumData(albumId, callback) {
+            const url = `https://api.imgur.com/3/album/${albumId}/images`;
+            const req = new XMLHttpRequest();
             req.onreadystatechange = function () {
-                if (req.readyState == 4 && req.status == 200) {
-                    processAlbumRequest(req.responseText);
+                if (req.readyState === 4) {
+                    if (req.status === 200) {
+                        callback(req.responseText);
+                    } else {
+                        console.error(`Error with the imgur API: ${req.status}`);
+                    }
                 }
-                else if (req.readyState == 4 && req.status != 200) {
-                    console.log(req.status + " Error with the imgur API: ", req.responseText);
-                }
-            }
-            req.open('GET', 'https://api.imgur.com/3/album/' + albumId + '/images', true);
+            };
+            req.open('GET', url, true);
             req.setRequestHeader('Authorization', 'Client-ID ' + clientId);
             req.send();
         }
 
-        function processAlbumRequest(response_text) {
-            var respObj = JSON.parse(response_text);
-            for (item of respObj.data.slice(0, 10)) {
-                console.log(item)
+        function processAlbumRequestXHR(response_text) {
+            const respObj = JSON.parse(response_text);
+            respObj.data.slice(0, 10).forEach(item => {
                 requestImage(item.id);
-            }
+            });
         }
 
-        function requestAlbumwithPromise() {
-            let albumId = document.getElementById("albumIdField").value;
-            if (!albumId) {
-                albumId = defaultAlbumId;
-            }
-            fetch('https://api.imgur.com/3/album/' + albumId + '/images', {
-                method: 'GET',
+        function requestImage(imageHash) {
+            const url = `https://api.imgur.com/3/image/${imageHash}`;
+            fetch(url, {
                 headers: {
                     'Authorization': 'Client-ID ' + clientId
                 }
             })
-                .then(response => {
-                    if (response.ok) {
-                        return response.json();
-                    } else {
-                        console.log('Error with the Imgur API:', response.status, response.statusText);
-                    }
-                })
-                .then(data => {
-                    data.data.slice(0, 10).forEach(item => {
-                        requestImage(item.id);
-                    });
-                })
-                .catch(error => {
-                    console.error('Fetch error:', error);
-                });
+            .then(response => response.json())
+            .then(processImageRequest)
+            .catch(error => {
+                console.error("Error with the imgur API:", error);
+            });
         }
 
-        async function requestAlbumWithAsyncAwait() {
-            let albumId = document.getElementById("albumIdField").value;
-            if (!albumId) {
-                albumId = defaultAlbumId;
-            }
-
-            try {
-                const response = await fetch('https://api.imgur.com/3/album/' + albumId + '/images', {
-                    method: 'GET',
-                    headers: {
-                        'Authorization': 'Client-ID ' + clientId
-                    }
-                });
-
-                if (response.ok) {
-                    const data = await response.json();
-                    data.data.slice(0, 10).forEach(item => {
-                        requestImage(item.id);
-                    });
-                } else {
-                    console.log('Error with the Imgur API:', response.status, response.statusText);
-                }
-            } catch (error) {
-                console.error('Fetch error:', error);
-            }
-        }
-
-        function requestImage(imageHash) {
-            var req = new XMLHttpRequest();
-            req.onreadystatechange = function () {
-                if (req.readyState == 4 && req.status == 200) {
-                    processImageRequest(req.responseText);
-                }
-                else if (req.readyState == 4 && req.status != 200) {
-                    console.log("Error with the imgur API");
-                }
-            }
-            req.open("GET", "https://api.imgur.com/3/image/" + imageHash, true); // true for asynchronous     
-            req.setRequestHeader('Authorization', 'Client-ID ' + clientId);
-            req.send();
-        }
-
-        function processImageRequest(response_text) {
-            var respObj = JSON.parse(response_text);
-            let imgElem = document.createElement("img");
+        function processImageRequest(respObj) {
+            const imgElem = document.createElement("img");
             imgElem.src = respObj.data.link;
-            //imgElem.referrerpolicy="no-referrer";
             document.body.appendChild(imgElem);
         }
 
+        function fetchAlbumDataAsync(albumId) {
+            const url = `https://api.imgur.com/3/album/${albumId}/images`;
+            return fetch(url, {
+                headers: {
+                    'Authorization': 'Client-ID ' + clientId
+                }
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                return response.json();
+            });
+        }
+
+        function processAlbumRequestPromise(data) {
+            data.data.slice(0, 10).forEach(item => {
+                requestImage(item.id);
+            });
+        }
+
+        function processAlbumRequestAsync(data) {
+            data.data.slice(0, 10).forEach(item => {
+                requestImage(item.id);
+            });
+        }
     </script>
 </head>
-
 <body>
     <header>
         <H1>Imgur Search :3</H1>
         <input id="albumIdField" value="Jfni3" type="text" placeholder="Enter any imgur's album id">
         <button onclick="requestAlbumwithXHR()">View Images with XHR</button>
-        <button onclick="requestAlbumwithPromise()">View Images with Fetch (Promise)</button>
+        <button onclick="requestAlbumWithPromise()">View Images with Fetch (Promise)</button>
         <button onclick="requestAlbumWithAsyncAwait()">View Images with Fetch (Async/Await)</button>
-
     </header>
 </body>
-
 </html>
