--- a/in-class-activity-ajax/index.html
+++ b/in-class-activity-ajax/index.html
@@ -22,8 +22,8 @@
         }
     </style>
     <script>
-        const clientId = "1d382e638ddd70e";
-        var defaultAlbumId = 'Jfni3';
+        const clientId = "448aa882fc6c74e";
+        var defaultAlbumId = 'basket';
 
         function requestAlbumwithXHR() {
             const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
