--- a/in-class-activity-ajax/index.html
+++ b/in-class-activity-ajax/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,108 +23,133 @@
         }
     </style>
     <script>
-        const clientId = "448aa882fc6c74e";
-        var defaultAlbumId = 'basket';
+        const clientId = "712645836bdd60b";
+        var defaultAlbumId = 'Jfni3';
 
-        function requestAlbumwithXHR() {
-            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
-            fetchAlbumData(albumId, processAlbumRequestXHR);
-        }
-
-        function requestAlbumWithPromise() {
-            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
-            fetchAlbumData(albumId, processAlbumRequestPromise);
-        }
-
-        async function requestAlbumWithAsyncAwait() {
-            const albumId = document.getElementById("albumIdField").value || defaultAlbumId;
-            try {
-                const albumData = await fetchAlbumDataAsync(albumId);
-                processAlbumRequestAsync(albumData);
-            } catch (error) {
-                console.error("Error with the imgur API:", error);
+        function requestAlbum() {
+            let albumId = document.getElementById("albumIdField").innerText;
+            if(!albumId) {
+                albumId = defaultAlbumId;
             }
-        }
-
-        function fetchAlbumData(albumId, callback) {
-            const url = `https://api.imgur.com/3/album/${albumId}/images`;
-            const req = new XMLHttpRequest();
+            var req = new XMLHttpRequest();
             req.onreadystatechange = function () {
-                if (req.readyState === 4) {
-                    if (req.status === 200) {
-                        callback(req.responseText);
-                    } else {
-                        console.error(`Error with the imgur API: ${req.status}`);
-                    }
+                if (req.readyState == 4 && req.status == 200) {
+                    processAlbumRequest(req.responseText);
                 }
-            };
-            req.open('GET', url, true);
+                else if (req.readyState == 4 && req.status != 200) {
+                    console.log(req.status + " Error with the imgur API: ", req.responseText);
+                }
+            }
+            req.open('GET', 'https://api.imgur.com/3/album/' + albumId + '/images', true);
             req.setRequestHeader('Authorization', 'Client-ID ' + clientId);
             req.send();
         }
 
-        function processAlbumRequestXHR(response_text) {
-            const respObj = JSON.parse(response_text);
-            respObj.data.slice(0, 10).forEach(item => {
+        function processAlbumRequest(response_text) {
+            var respObj = JSON.parse(response_text);
+            for (item of respObj.data.slice(0, 10)){
                 requestImage(item.id);
-            });
+            }
         }
 
         function requestImage(imageHash) {
-            const url = `https://api.imgur.com/3/image/${imageHash}`;
-            fetch(url, {
+            var req = new XMLHttpRequest();
+            req.onreadystatechange = function () {
+                if (req.readyState == 4 && req.status == 200) {
+                    processImageRequest(req.responseText);
+                }
+                else if (req.readyState == 4 && req.status != 200) {
+                    console.log("Error with the imgur API");
+                }
+            }
+            req.open("GET", "https://api.imgur.com/3/image/" + imageHash, true);
+            req.setRequestHeader('Authorization', 'Client-ID ' + clientId);
+            req.send();
+        }
+
+        function processImageRequest(response_text) {
+            var respObj = JSON.parse(response_text);
+            let imgElem = document.createElement("img");
+            imgElem.src = respObj.data.link;
+            document.body.appendChild(imgElem);
+        }
+
+        // Using Promises
+        function requestAlbumWithPromises() {
+            let albumId = document.getElementById("albumIdField").value || defaultAlbumId;
+            fetch('https://api.imgur.com/3/album/' + albumId + '/images', {
                 headers: {
                     'Authorization': 'Client-ID ' + clientId
                 }
             })
             .then(response => response.json())
-            .then(processImageRequest)
-            .catch(error => {
-                console.error("Error with the imgur API:", error);
-            });
+            .then(data => {
+                for (item of data.data.slice(0, 10)) {
+                    fetchImageWithPromises(item.id);
+                }
+            })
+            .catch(error => console.error("Error:", error));
         }
 
-        function processImageRequest(respObj) {
-            const imgElem = document.createElement("img");
-            imgElem.src = respObj.data.link;
-            document.body.appendChild(imgElem);
-        }
-
-        function fetchAlbumDataAsync(albumId) {
-            const url = `https://api.imgur.com/3/album/${albumId}/images`;
-            return fetch(url, {
+        function fetchImageWithPromises(imageHash) {
+            fetch("https://api.imgur.com/3/image/" + imageHash, {
                 headers: {
                     'Authorization': 'Client-ID ' + clientId
                 }
             })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
+            .then(response => response.json())
+            .then(data => {
+                let imgElem = document.createElement("img");
+                imgElem.src = data.data.link;
+                document.body.appendChild(imgElem);
+            })
+            .catch(error => console.error("Error:", error));
+        }
+
+        // Using Async/Await
+        async function requestAlbumWithAsyncAwait() {
+            try {
+                let albumId = document.getElementById("albumIdField").value || defaultAlbumId;
+                let response = await fetch('https://api.imgur.com/3/album/' + albumId + '/images', {
+                    headers: {
+                        'Authorization': 'Client-ID ' + clientId
+                    }
+                });
+                let data = await response.json();
+                for (item of data.data.slice(0, 10)) {
+                    await fetchImageWithAsyncAwait(item.id);
                 }
-                return response.json();
-            });
+            } catch (error) {
+                console.error("Error:", error);
+            }
         }
 
-        function processAlbumRequestPromise(data) {
-            data.data.slice(0, 10).forEach(item => {
-                requestImage(item.id);
-            });
+        async function fetchImageWithAsyncAwait(imageHash) {
+            try {
+                let response = await fetch("https://api.imgur.com/3/image/" + imageHash, {
+                    headers: {
+                        'Authorization': 'Client-ID ' + clientId
+                    }
+                });
+                let data = await response.json();
+                let imgElem = document.createElement("img");
+                imgElem.src = data.data.link;
+                document.body.appendChild(imgElem);
+            } catch (error) {
+                console.error("Error:", error);
+            }
         }
 
-        function processAlbumRequestAsync(data) {
-            data.data.slice(0, 10).forEach(item => {
-                requestImage(item.id);
-            });
-        }
     </script>
 </head>
+
 <body>
     <header>
-        <H1>Imgur Search :3</H1>
         <input id="albumIdField" value="Jfni3" type="text" placeholder="Enter any imgur's album id">
-        <button onclick="requestAlbumwithXHR()">View Images with XHR</button>
-        <button onclick="requestAlbumWithPromise()">View Images with Fetch (Promise)</button>
-        <button onclick="requestAlbumWithAsyncAwait()">View Images with Fetch (Async/Await)</button>
+        <button onclick=requestAlbum()>View Images (XHR)</button>
+        <button onclick=requestAlbumWithPromises()>View Images (Promises)</button>
+        <button onclick=requestAlbumWithAsyncAwait()>View Images (Async/Await)</button>
     </header>
 </body>
+
 </html>
